LPS-57127 Page title and description are not aligned correctly

--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/META-INF/resources/admin/css/main.css
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/META-INF/resources/admin/css/main.css
@@ -83,6 +83,16 @@
 				input {
 					border-width: 0;
 
+					&.form-builder-page-header-description {
+						margin-bottom: 5px;
+						padding-top: 0;
+					}
+
+					&.form-builder-page-header-title {
+						margin: 10px 0 0 0;
+						padding-bottom: 0;
+					}
+
 					&:focus {
 						box-shadow: none;
 					}
